--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="sidebar">
         <div id="dash-title">Mr.Willard</div>
         <div class="bar-divider"></div>
-        <a href id="dashboard"Dashboard></a>
+        <a href id="dashboard">Dashboard</a>
         <a href id="home">Home</a>
         <a href id="profile">Profile</a>
         <a href id="messages">Messages</a>
@@ -22,7 +22,6 @@
         <a href id="settings">Settings</a>
         <a href id="support">Support</a>
         <a href id="privacy">Privacy</a>
-
     </div>
     <div class="topnav"></div>
     <div class="maincontent"></div>
