Add image icons for sidebar and set import font.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="page-grid">
     <div class="sidebar">
-        <div id="dash-title">Mr.Willard</div>
+        <div id="dash-title">Administrator</div>
         <div class="bar-divider"></div>
         <a href id="dashboard">Dashboard</a>
         <a href id="home">Home</a>
