Add navigation bar to the top of the grid template.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
         <a href id="support">Support</a>
         <a href id="privacy">Privacy</a>
     </div>
-    <div class="topnav"></div>
+    <div class="topnav">
+        <ul class="navlink">
+            <li><a href id="new">New</a></a></li>
+            <li><a href id="upload">Upload</a></li>
+            <li><a href id="share">Share</a></li>
+        </ul>
+        <div class="navright">
+            <input type="text" placeholder= " " name="search" id="search">
+            <div class="bar-divider"></div>
+            <div class="alert"></div>
+            <div class="bar-divider"></div>
+            <div class="avatar">Mr.Willard</div>
+            <div class="avatar-icon"></div>
+        </div>
+    </div>
     <div class="maincontent"></div>
 </div>
 </body>
