Make a grid layout for the main-content section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,23 @@
             <div class="avatar-icon"></div>
         </div>
     </div>
-    <div class="maincontent"></div>
+    <div class="maincontent">
+        <div class="project">
+            <div class="project-title">Your Projects</div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+        </div>
+        <div class="news">
+            <div class="news-title">Announcements</div>
+        </div>
+    </div>
+    
 </div>
 </body>
 </html>
