Add content-cards and make slight adjustment to the grid-layout

--- a/index.html
+++ b/index.html
@@ -41,14 +41,62 @@
     <div class="maincontent">
         <div class="project">
             <div class="project-title">Your Projects</div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
+            <div class="project-card">
+             <div class="card-img"></div>
+             <div class="card-text"><h3>A project title</h3>
+                Sed non faucibus quam. Aliquam quis augue lorem. Sed pretium malesuada ante. Donec eu commodo justo.</div>
+             <div class="card-tab"><div class="card-icon star"></div><div class="card-icon view"></div><div class="card-icon share"></div>
+             </div>         
+            </div>
+            <div class="project-card">
+                <div class="card-img"></div>
+                <div class="card-text"><h3>A project title</h3>
+                   Sed non faucibus quam. Aliquam quis augue lorem. Sed pretium malesuada ante. Donec eu commodo justo.</div>
+                <div class="card-tab"><div class="card-icon star"></div><div class="card-icon view"></div><div class="card-icon share"></div>
+                </div>         
+               </div>
+            <div class="project-card">
+                <div class="card-img"></div>
+                <div class="card-text"><h3>A project title</h3>
+                   Sed non faucibus quam. Aliquam quis augue lorem. Sed pretium malesuada ante. Donec eu commodo justo.</div>
+                <div class="card-tab"><div class="card-icon star"></div><div class="card-icon view"></div><div class="card-icon share"></div>
+                </div>         
+            </div>
+            <div class="project-card">
+                <div class="card-img"></div>
+                <div class="card-text"><h3>A project title</h3>
+                   Sed non faucibus quam. Aliquam quis augue lorem. Sed pretium malesuada ante. Donec eu commodo justo.</div>
+                <div class="card-tab"><div class="card-icon star"></div><div class="card-icon view"></div><div class="card-icon share"></div>
+                </div>         
+            </div>
+            <div class="project-card">
+                <div class="card-img"></div>
+                <div class="card-text"><h3>A project title</h3>
+                   Sed non faucibus quam. Aliquam quis augue lorem. Sed pretium malesuada ante. Donec eu commodo justo.</div>
+                <div class="card-tab"><div class="card-icon star"></div><div class="card-icon view"></div><div class="card-icon share"></div>
+                </div>         
+            </div>
+            <div class="project-card">
+                <div class="card-img"></div>
+                <div class="card-text"><h3>A project title</h3>
+                   Sed non faucibus quam. Aliquam quis augue lorem. Sed pretium malesuada ante. Donec eu commodo justo.</div>
+                <div class="card-tab"><div class="card-icon star"></div><div class="card-icon view"></div><div class="card-icon share"></div>
+                </div>         
+            </div>
+            <div class="project-card">
+                <div class="card-img"></div>
+                <div class="card-text"><h3>A project title</h3>
+                   Sed non faucibus quam. Aliquam quis augue lorem. Sed pretium malesuada ante. Donec eu commodo justo.</div>
+                <div class="card-tab"><div class="card-icon star"></div><div class="card-icon view"></div><div class="card-icon share"></div>
+                </div>         
+            </div>
+            <div class="project-card">
+                <div class="card-img"></div>
+                <div class="card-text"><h3>A project title</h3>
+                   Sed non faucibus quam. Aliquam quis augue lorem. Sed pretium malesuada ante. Donec eu commodo justo.</div>
+                <div class="card-tab"><div class="card-icon star"></div><div class="card-icon view"></div><div class="card-icon share"></div>
+                </div>         
+            </div>
         </div>
         <div class="news">
             <div class="news-title">Announcements</div>
