Add an announcement bar to the main-content section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,25 @@
         </div>
         <div class="news">
             <div class="news-title">Announcements</div>
+            <div class="news-card">
+                <div class="news-text"><h4>Site Maintenance</h4>
+                    <p>A diam sollicitudin tempor id. Mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan tortor.</p>
+                    <p><a href>Read More →</a></p>
+                </div>
+                <div class="bar-divider"></div>
+                <div class="news-text"><h4>Community Share Day</h4>
+                    <p>Risus quis varius quam quisque id diam vel quam elementum. Lobortis mattis aliquam faucibus purus in. </p>
+                    <p><a href>Read More →</a></p>
+                </div>
+                <div class="bar-divider"></div>
+                <div class="news-text"><h4>Updated Privacy Policy</h4>
+                    <p>Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. Ornare massa eget egestas purus. </p>
+                    <p><a href>Read More →</a></p>
+                </div>
+                
+
+            </div>
+            <div class="news-title">Trending</div>
         </div>
     </div>
     
