Add trending users to the main-content section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,20 @@
                 <div class="card-tab"><div class="card-icon star"></div><div class="card-icon view"></div><div class="card-icon share"></div>
                 </div>         
             </div>
+            <div class="project-card">
+                <div class="card-img"></div>
+                <div class="card-text"><h3>A project title</h3>
+                   Sed non faucibus quam. Aliquam quis augue lorem. Sed pretium malesuada ante. Donec eu commodo justo.</div>
+                <div class="card-tab"><div class="card-icon star"></div><div class="card-icon view"></div><div class="card-icon share"></div>
+                </div>         
+            </div>
+            <div class="project-card">
+                <div class="card-img"></div>
+                <div class="card-text"><h3>A project title</h3>
+                   Sed non faucibus quam. Aliquam quis augue lorem. Sed pretium malesuada ante. Donec eu commodo justo.</div>
+                <div class="card-tab"><div class="card-icon star"></div><div class="card-icon view"></div><div class="card-icon share"></div>
+                </div>         
+            </div>
         </div>
         <div class="news">
             <div class="news-title">Announcements</div>
@@ -119,6 +133,28 @@
 
             </div>
             <div class="news-title">Trending</div>
+            <div class="news-card">
+                <div class="trending-content">
+                    <div class="user iconone"></div><div class="user-id">
+                        <h5>@Marth・マルス</h5><p>World Peace Builder</p>
+                    </div>
+                </div>
+                <div class="trending-content">
+                    <div class="user icontwo"></div><div class="user-id">
+                        <h5>@Anna・アンナ</h5><p>Super Cool Merchant</p>
+                    </div>
+                </div>    
+                <div class="trending-content">
+                    <div class="user iconthree"></div><div class="user-id">
+                        <h5>@Poring・ポリング</h5><p>Life Changing Jelly</p>
+                        </div>
+                </div>
+                <div class="trending-content">
+                    <div class="user iconfour"></div><div class="user-id">
+                        <h5>@Maki・マキ</h5><p>Ultimate Trustworthy</p>
+                        </div>
+                </div>
+            </div>
         </div>
     </div>
     
